--- a/app/src/main/res/layout-land/activity_start_kiosk_page.xml
+++ b/app/src/main/res/layout-land/activity_start_kiosk_page.xml
@@ -83,12 +83,12 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginEnd="16dp"
-                android:background="#FFFFFF"
+                android:background="#FF5555"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toTopOf="@+id/guideline"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/user" />
+                app:srcCompat="@drawable/usericon" />
 
 
             <TextView
