--- a/app/src/main/res/layout/activity_start_kiosk_page.xml
+++ b/app/src/main/res/layout/activity_start_kiosk_page.xml
@@ -56,12 +56,12 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
-        android:background="#FFFFFF"
+        android:background="#FF5555"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/user" />
+        app:srcCompat="@drawable/usericon" />
 
     <TextView
         android:id="@+id/textView"
