--- a/app/src/main/res/layout/inventory_list.xml
+++ b/app/src/main/res/layout/inventory_list.xml
@@ -1,86 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="#FFFFFF"
     tools:context=".Control_inventory_page">
 
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="6.3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/invent_num"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_margin="1dp"
-        android:layout_weight="1"
-        android:background="@drawable/table_temp"
-        android:backgroundTint="#D1C6C6"
-        android:gravity="center"
-        android:text="1"
-        android:textColor="#000000"
-        android:textSize="14sp" />
+        <TextView
+            android:id="@+id/invent_num"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/table_temp"
+            android:gravity="center" />
 
-    <TextView
-        android:id="@+id/invent_name"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_margin="1dp"
-        android:layout_weight="1"
-        android:background="#FFEAEA"
-        android:backgroundTint="#FFEAEA"
-        android:gravity="center"
-        android:textSize="14sp" />
+        <TextView
+            android:id="@+id/invent_name"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/table_temp"
+            android:gravity="center"
+            android:textSize="14sp" />
 
-    <TextView
-        android:id="@+id/invent_price"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_margin="1dp"
-        android:layout_weight="1"
-        android:background="#FFEAEA"
-        android:backgroundTint="#FFEAEA"
-        android:gravity="center"
-        android:textSize="14sp" />
+        <TextView
+            android:id="@+id/invent_price"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/table_temp"
+            android:gravity="center"
+            android:textSize="14sp" />
 
-    <TextView
-        android:id="@+id/invent_stock"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_margin="1dp"
-        android:layout_weight="1"
-        android:background="#FFEAEA"
-        android:backgroundTint="#FFEAEA"
-        android:gravity="center"
-        android:textSize="14sp" />
+        <TextView
+            android:id="@+id/invent_stock"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="@drawable/table_temp"
+            android:gravity="center"
+            android:textSize="14sp" />
 
-    <TextView
-        android:id="@+id/invent_partner"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_margin="1dp"
-        android:layout_weight="1"
-        android:background="#FFEAEA"
-        android:backgroundTint="#FFEAEA"
-        android:gravity="center"
-        android:textSize="14sp" />
+        <TextView
+            android:id="@+id/invent_partner"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0.8"
+            android:background="@drawable/table_temp"
+            android:gravity="center"
+            android:textSize="14sp" />
 
-    <TextView
-        android:id="@+id/invent_partNum"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_margin="1dp"
-        android:layout_weight="1"
-        android:background="#FFEAEA"
-        android:backgroundTint="#FFEAEA"
-        android:gravity="center"
-        android:textSize="14sp" />
+        <TextView
+            android:id="@+id/invent_partNum"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="@drawable/table_temp"
+            android:gravity="center"
+            android:textSize="14sp" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="#FFF7F7"
-        android:scrollbarAlwaysDrawVerticalTrack="false" />
-
-</LinearLayout>
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
