--- a/app/src/main/res/layout-land/activity_control_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_control_menu_page.xml
@@ -68,11 +68,11 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="40dp"
-                android:background="#FFFFFF"
+                android:background="#FF5555"
                 android:scaleType="fitXY"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/user" />
+                app:srcCompat="@drawable/usericon" />
 
             <!-- 메뉴 관리 -->
             <TextView
