--- a/app/src/main/res/layout-land/activity_sales_condition_page.xml
+++ b/app/src/main/res/layout-land/activity_sales_condition_page.xml
@@ -38,7 +38,7 @@
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/user" />
+        app:srcCompat="@drawable/usericon" />
 
     <TextView
         android:id="@+id/TextView"
