--- a/app/src/main/res/layout/activity_join_page.xml
+++ b/app/src/main/res/layout/activity_join_page.xml
@@ -13,7 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
@@ -21,16 +23,6 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.08" />
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="110dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/kobbicon" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
@@ -72,10 +64,12 @@
             android:id="@+id/textView12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/nanumsquareneo_variable"
             android:text="매장이름"
             android:textColor="#504E4E"
             android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/user_shop_name"
             app:layout_constraintTop_toTopOf="@+id/textView2" />
 
@@ -84,9 +78,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:fontFamily="@font/nanumsquareneo_variable"
             android:text="전화번호"
             android:textColor="#504E4E"
             android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/user_pw"
             app:layout_constraintTop_toBottomOf="@+id/user_pw" />
 
@@ -95,9 +91,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:fontFamily="@font/nanumsquareneo_variable"
             android:text="아이디"
             android:textColor="#504E4E"
             android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/user_shop_name"
             app:layout_constraintTop_toBottomOf="@+id/user_shop_name" />
 
@@ -106,9 +104,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:fontFamily="@font/nanumsquareneo_variable"
             android:text="비밀번호"
             android:textColor="#504E4E"
             android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/textView11"
             app:layout_constraintTop_toBottomOf="@+id/user_id" />
 
@@ -120,8 +120,10 @@
             android:background="@drawable/button_style"
             android:backgroundTint="#FFFFFF"
             android:ems="10"
+            android:fontFamily="@font/nanumsquareneo_variable"
             android:hint="  아이디를 입력해 주세요"
             android:inputType="textPersonName"
+            android:textColorHint="#504E4E"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/user_shop_name"
             app:layout_constraintStart_toStartOf="@+id/textView11"
@@ -137,8 +139,10 @@
             android:background="@drawable/button_style"
             android:backgroundTint="#FFFFFF"
             android:ems="10"
+            android:fontFamily="@font/nanumsquareneo_variable"
             android:hint="  매장명을 입력해 주세요"
             android:inputType="textPersonName"
+            android:textColorHint="#504E4E"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/textView2"
             app:layout_constraintStart_toStartOf="@+id/textView2"
@@ -152,8 +156,10 @@
             android:background="@drawable/button_style"
             android:backgroundTint="#FFFFFF"
             android:ems="10"
+            android:fontFamily="@font/nanumsquareneo_variable"
             android:hint="  비밀번호를 입력해 주세요"
             android:inputType="textPersonName"
+            android:textColorHint="#504E4E"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/user_id"
             app:layout_constraintStart_toStartOf="@+id/textView16"
@@ -167,8 +173,10 @@
             android:background="@drawable/button_style"
             android:backgroundTint="#FFFFFF"
             android:ems="10"
+            android:fontFamily="@font/nanumsquareneo_variable"
             android:hint="  전화번호를 입력해 주세요"
             android:inputType="textPersonName"
+            android:textColorHint="#504E4E"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/user_pw"
             app:layout_constraintStart_toStartOf="@+id/textView13"
@@ -189,6 +197,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:fontFamily="@font/nanumsquareneo_bold"
             android:text="회원가입"
             android:textColor="#504E4E"
             android:textSize="30sp"
@@ -203,6 +212,7 @@
             android:layout_height="60dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/button_style"
+            android:fontFamily="@font/nanumsquareneo_bold"
             android:text="가입 완료"
             android:textColor="#FFFFFF"
             android:textSize="24sp"
@@ -212,17 +222,37 @@
             app:layout_constraintStart_toStartOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
+        <TextView
+            android:id="@+id/textView33"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="#FF5555"
+            app:layout_constraintBottom_toTopOf="@+id/guideline"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageButton
             android:id="@+id/btn_User_info_page"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="16dp"
-            android:background="#FFFFFF"
+            android:background="#FF5555"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/homeicon_1" />
+            app:srcCompat="@drawable/homeicon" />
+
+        <ImageView
+            android:id="@+id/imageView18"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/guideline"
+            app:layout_constraintEnd_toStartOf="@+id/textView3"
+            app:layout_constraintStart_toStartOf="@+id/textView33"
+            app:layout_constraintTop_toTopOf="@+id/textView33"
+            app:srcCompat="@drawable/kobblogo" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
