--- a/app/src/main/res/layout/activity_manage_main_page.xml
+++ b/app/src/main/res/layout/activity_manage_main_page.xml
@@ -67,6 +67,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/button_style"
         android:backgroundTint="#FF5555"
+        android:fontFamily="@font/nanumsquareneo_bold"
         android:text="키오스크 관리"
         android:textColor="#F7F7F7"
         android:textSize="24sp"
@@ -82,10 +83,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:background="@drawable/button_style"
-        android:backgroundTint="#FF5555"
-        android:padding="3dp"
+        android:backgroundTint="#FFEAEA"
+        android:fontFamily="@font/nanumsquareneo_bold"
         android:text="모드전환"
-        android:textColor="#FFFFFF"
+        android:textColor="#504E4E"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/btn_User_info_page"
@@ -101,6 +102,7 @@
         android:layout_marginEnd="20dp"
         android:background="@drawable/button_style"
         android:backgroundTint="#FF5555"
+        android:fontFamily="@font/nanumsquareneo_bold"
         android:text="매출 현황"
         android:textColor="#F7F7F7"
         android:textSize="24sp"
@@ -114,10 +116,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/nanumsquareneo_bold"
         android:text="관리자 메뉴"
         android:textColor="#504E4E"
         android:textSize="34sp"
-        android:textStyle="normal"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
@@ -129,6 +132,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/button_style"
         android:backgroundTint="#FF5555"
+        android:fontFamily="@font/nanumsquareneo_bold"
         android:text="재고 관리"
         android:textColor="#F7F7F7"
         android:textSize="24sp"
@@ -145,6 +149,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/button_style"
         android:backgroundTint="#FF5555"
+        android:fontFamily="@font/nanumsquareneo_bold"
         android:text="메뉴 관리"
         android:textColor="#F7F7F7"
         android:textSize="24sp"
@@ -153,6 +158,16 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/btn_Sales_condition_page"
         app:layout_constraintTop_toBottomOf="@+id/btn_Sales_condition_page" />
+
+    <TextView
+        android:id="@+id/textView76"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#FF5555"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/btn_User_info_page"
@@ -169,12 +184,12 @@
         app:srcCompat="@drawable/usericon" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="152dp"
-        android:layout_height="67dp"
+        android:id="@+id/imageView22"
+        android:layout_width="100dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/kobbicon" />
+        app:layout_constraintTop_toTopOf="@+id/textView76"
+        app:srcCompat="@drawable/kobblogo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
