--- a/app/src/main/res/layout-land/activity_cart_page.xml
+++ b/app/src/main/res/layout-land/activity_cart_page.xml
@@ -169,7 +169,7 @@
                 app:layout_constraintTop_toTopOf="@+id/textView4" />
 
             <TextView
-                android:id="@+id/textView30"
+                android:id="@+id/month_sales"
                 android:layout_width="360dp"
                 android:layout_height="330dp"
                 android:layout_marginStart="16dp"
@@ -186,8 +186,8 @@
                 android:textSize="30sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/textView4"
-                app:layout_constraintStart_toStartOf="@+id/textView30"
-                app:layout_constraintTop_toBottomOf="@+id/textView30" />
+                app:layout_constraintStart_toStartOf="@+id/month_sales"
+                app:layout_constraintTop_toBottomOf="@+id/month_sales" />
 
             <!--            <TextView-->
 <!--                android:id="@+id/textView28"-->
