--- a/app/src/main/res/layout-land/activity_sales_condition_page.xml
+++ b/app/src/main/res/layout-land/activity_sales_condition_page.xml
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/textView30"
+        android:id="@+id/month_sales"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="월 별 매출"
